--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 17:05:02 2018</p>
+         Last Run: Sun Nov  4 18:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -33,7 +33,7 @@
                         <td>Overcast</td>
                         <td>-5</td>
                         <td>-9</td>
-                        <td>10</td>
+                        <td>17</td>
                         <td>62</td>
                         <td>0</td>
                         <td>10</td>
@@ -45,11 +45,11 @@
                         <td>Overcast</td>
                         <td>-5</td>
                         <td>-9</td>
-                        <td>11</td>
-                        <td>64</td>
+                        <td>8</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>NE</td>
+                        <td>NNE</td>
                         <td>96</td>
                      </tr>
                      <tr>
@@ -160,8 +160,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "10",
-                 "11",
+                 "17",
+                 "8",
                  "3"
                ]
              },
@@ -172,7 +172,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "62",
-                 "64",
+                 "65",
                  "67"
                ]
              },
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 17:05:02 2018</p>
+         Last Run: Sun Nov  4 18:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -249,11 +249,11 @@
                         <td>-8</td>
                         <td>-11</td>
                         <td>3</td>
-                        <td>64</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
-                        <td>36</td>
+                        <td>34</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -261,11 +261,11 @@
                         <td>-8</td>
                         <td>-11</td>
                         <td>3</td>
-                        <td>63</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
-                        <td>36</td>
+                        <td>35</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -273,11 +273,11 @@
                         <td>-9</td>
                         <td>-13</td>
                         <td>3</td>
-                        <td>64</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>WSW</td>
-                        <td>33</td>
+                        <td>W</td>
+                        <td>31</td>
                      </tr>
                   </tbody>
                </table>
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "65",
                  "64",
-                 "63",
-                 "64"
+                 "65"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "36",
-                 "36",
-                 "33"
+                 "34",
+                 "35",
+                 "31"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 17:05:02 2018</p>
+         Last Run: Sun Nov  4 18:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 10, 2018 - 12:45PM til  1:45PM</H4>
                <table class="table table-striped">
@@ -463,36 +463,36 @@
                         <td>Partly Cloudy</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>3</td>
-                        <td>57</td>
+                        <td>1</td>
+                        <td>55</td>
                         <td>1</td>
                         <td>10</td>
                         <td>WNW</td>
-                        <td>39</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
+                        <td>2</td>
+                        <td>-1</td>
                         <td>1</td>
-                        <td>-2</td>
-                        <td>3</td>
-                        <td>56</td>
+                        <td>54</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>W</td>
-                        <td>31</td>
+                        <td>SW</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>2</td>
                         <td>0</td>
-                        <td>3</td>
-                        <td>53</td>
+                        <td>1</td>
+                        <td>51</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>WSW</td>
-                        <td>25</td>
+                        <td>SW</td>
+                        <td>50</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,7 +520,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-2",
-                 "-2",
+                 "-1",
                  "0"
                ]
              },
@@ -532,7 +532,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "1",
-                 "1",
+                 "2",
                  "2"
                ]
              }
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
-                 "3",
-                 "3"
+                 "1",
+                 "1",
+                 "1"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "57",
-                 "56",
-                 "53"
+                 "55",
+                 "54",
+                 "51"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "39",
-                 "31",
-                 "25"
+                 "58",
+                 "54",
+                 "50"
                ]
              }
            ]
