--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 23:05:02 2018</p>
+         Last Run: Mon Nov  5 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -33,23 +33,23 @@
                         <td>Overcast</td>
                         <td>-5</td>
                         <td>-9</td>
-                        <td>18</td>
+                        <td>20</td>
                         <td>68</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>NNE</td>
+                        <td>NE</td>
                         <td>97</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Overcast</td>
-                        <td>-5</td>
-                        <td>-9</td>
-                        <td>11</td>
-                        <td>69</td>
+                        <td>-6</td>
+                        <td>-10</td>
+                        <td>18</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>NNE</td>
+                        <td>NE</td>
                         <td>97</td>
                      </tr>
                      <tr>
@@ -57,12 +57,12 @@
                         <td>Overcast</td>
                         <td>-6</td>
                         <td>-10</td>
-                        <td>5</td>
-                        <td>70</td>
+                        <td>12</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NE</td>
-                        <td>94</td>
+                        <td>95</td>
                      </tr>
                   </tbody>
                </table>
@@ -90,7 +90,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-9",
-                 "-9",
+                 "-10",
                  "-10"
                ]
              },
@@ -102,7 +102,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-5",
-                 "-5",
+                 "-6",
                  "-6"
                ]
              }
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "20",
                  "18",
-                 "11",
-                 "5"
+                 "12"
                ]
              },
              {
@@ -172,8 +172,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "68",
-                 "69",
-                 "70"
+                 "70",
+                 "71"
                ]
              },
              {
@@ -184,7 +184,7 @@
                "data":[
                  "97",
                  "97",
-                 "94"
+                 "95"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 23:05:02 2018</p>
+         Last Run: Mon Nov  5 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -249,7 +249,7 @@
                         <td>-8</td>
                         <td>-11</td>
                         <td>3</td>
-                        <td>65</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>6</td>
                         <td>SW</td>
@@ -258,10 +258,10 @@
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-8</td>
-                        <td>-11</td>
+                        <td>-9</td>
+                        <td>-13</td>
                         <td>3</td>
-                        <td>65</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>6</td>
                         <td>WSW</td>
@@ -273,7 +273,7 @@
                         <td>-9</td>
                         <td>-13</td>
                         <td>3</td>
-                        <td>66</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -305,7 +305,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-11",
-                 "-11",
+                 "-13",
                  "-13"
                ]
              },
@@ -317,7 +317,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-8",
-                 "-8",
+                 "-9",
                  "-9"
                ]
              }
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "65",
-                 "65",
-                 "66"
+                 "68",
+                 "67",
+                 "69"
                ]
              },
              {
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 23:05:02 2018</p>
+         Last Run: Mon Nov  5 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC02 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 10, 2018 - 12:45PM til  1:45PM</H4>
                <table class="table table-striped">
@@ -461,38 +461,38 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>1</td>
+                        <td>2</td>
                         <td>-2</td>
+                        <td>7</td>
+                        <td>57</td>
                         <td>1</td>
-                        <td>55</td>
-                        <td>1</td>
-                        <td>10</td>
-                        <td>WNW</td>
-                        <td>58</td>
+                        <td>13</td>
+                        <td>NW</td>
+                        <td>44</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>2</td>
                         <td>-1</td>
+                        <td>7</td>
+                        <td>55</td>
                         <td>1</td>
-                        <td>54</td>
-                        <td>1</td>
-                        <td>10</td>
-                        <td>SW</td>
-                        <td>53</td>
+                        <td>11</td>
+                        <td>NNW</td>
+                        <td>38</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>2</td>
-                        <td>0</td>
+                        <td>-1</td>
+                        <td>7</td>
+                        <td>53</td>
                         <td>1</td>
-                        <td>51</td>
-                        <td>1</td>
-                        <td>8</td>
-                        <td>SW</td>
-                        <td>49</td>
+                        <td>10</td>
+                        <td>NNW</td>
+                        <td>31</td>
                      </tr>
                   </tbody>
                </table>
@@ -521,7 +521,7 @@
                "data":[
                  "-2",
                  "-1",
-                 "0"
+                 "-1"
                ]
              },
              {
@@ -531,7 +531,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "1",
+                 "2",
                  "2",
                  "2"
                ]
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "1",
-                 "1",
-                 "1"
+                 "7",
+                 "7",
+                 "7"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "57",
                  "55",
-                 "54",
-                 "51"
+                 "53"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "58",
-                 "53",
-                 "49"
+                 "44",
+                 "38",
+                 "31"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov  4 23:05:02 2018</p>
+         Last Run: Mon Nov  5 00:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 11, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -675,27 +675,27 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>2</td>
-                        <td>-1</td>
+                        <td>0</td>
                         <td>9</td>
-                        <td>49</td>
+                        <td>48</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>WNW</td>
-                        <td>79</td>
+                        <td>81</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Overcast</td>
-                        <td>2</td>
-                        <td>0</td>
-                        <td>10</td>
-                        <td>51</td>
+                        <td>3</td>
+                        <td>1</td>
+                        <td>9</td>
+                        <td>49</td>
                         <td>1</td>
                         <td>8</td>
                         <td>NW</td>
-                        <td>82</td>
+                        <td>83</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -703,7 +703,7 @@
                         <td>3</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>49</td>
+                        <td>47</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NW</td>
@@ -734,8 +734,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-1",
                  "0",
+                 "1",
                  "1"
                ]
              },
@@ -747,7 +747,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "2",
-                 "2",
+                 "3",
                  "3"
                ]
              }
@@ -806,7 +806,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "9",
-                 "10",
+                 "9",
                  "10"
                ]
              },
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "48",
                  "49",
-                 "51",
-                 "49"
+                 "47"
                ]
              },
              {
@@ -827,8 +827,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "79",
-                 "82",
+                 "81",
+                 "83",
                  "85"
                ]
              }
